# oakmore-billing

./: COMPETITIVE_REVIEW.md  EXECUTIVE_SUMMARY.md  ONE_PAGER.md  TECHNICAL_SUMMARY.md  WHAT_WE_ARE_BUILDING.md  render.yaml
services/products-service/: README.md  pyproject.toml  requirements.txt
services/products-service/app/: accounts.py  db.py  domain.py  enums.py  generator.py  invoicing.py  main.py  mm.py  models.py  rating.py  schemas.py  ui.py
services/products-service/migrations/: 001_init.sql
services/products-service/tests/: test_products.py
web/: Caddyfile  Dockerfile  requirements.txt  rxconfig.py
web/oakmore/: oakmore.py
