[project]
name = "products-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "pydantic>=2.10",
  "alembic>=1.14",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyright>=1.1", "schemathesis>=3.38", "httpx>=0.28"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["app", "tests"]
reportMissingImports = false

[tool.pytest.ini_options]
pythonpath = ["."]
